--- a/docs/src/main/asciidoc/_developer-guide/JPA_Reference_Guide.adoc
+++ b/docs/src/main/asciidoc/_developer-guide/JPA_Reference_Guide.adoc
@@ -515,10 +515,10 @@ version="1.0"> +
 [[migrating-from-openjpa]]
 == Migrating from OpenJPA
 
-You need to copy the OpenJPA jars (e.g. openjpa-all.jar serp.jar) into
+You need to copy the OpenJPA jar (e.g. openjpa-all.jar) into
 the WildFly modules/org/apache/openjpa/main folder and update
 modules/org/apache/openjpa/main/module.xml to include the same jar file
-names that you copied in. This will help you get your application that
+name that you copied in. This will help you get your application that
 depends on OpenJPA, to deploy on WildFly.
 
 [source,java,options="nowrap"]
@@ -531,22 +531,17 @@ depends on OpenJPA, to deploy on WildFly.
               <exclude path="javax/**" />
            </filter>
         </resource-root>
-        <resource-root path="serp.jar"/>
     </resources>
  
     <dependencies>
-        <module name="javax.api"/>
         <module name="javax.annotation.api"/>
         <module name="javax.enterprise.api"/>
         <module name="javax.persistence.api"/>
         <module name="javax.transaction.api"/>
         <module name="javax.validation.api"/>
         <module name="javax.xml.bind.api"/>
-        <module name="org.apache.commons.collections"/>
-        <module name="org.apache.commons.lang"/>
         <module name="org.jboss.as.jpa.spi"/>
         <module name="org.jboss.logging"/>
-        <module name="org.jboss.vfs"/>
         <module name="org.jboss.jandex"/>
     </dependencies>
 </module>
